# vcl-local

./: Cargo.toml  README.md  justfile  rust-toolchain
examples/: acl.vcl  backend.vcl  custom-var.vcl  director.vcl  float.vcl  function.vcl  hello.vcl  integer.vcl  ip.vcl  log.vcl  remove.vcl  rtime.vcl  string-concat.vcl  subfield-lookup.vcl  subfield-setting.vcl  table.vcl  test.vcl
examples/polyfill/: breadcrumbs.vcl  fastly-boilerplate-begin.vcl  fastly-boilerplate-end.vcl  main.vcl  normalise-user-agent-3-25-1.vcl  normalise-user-agent.vcl  polyfill-service.vcl  redirects.vcl  synthetic-responses.vcl  top_pops.vcl
src/: expr.rs  interpreter.rs  main.rs  parse_probe.rs  parser.rs  scanner.rs
