[package]
name = "vcl-local"
version = "0.1.0"
authors = ["Jake Champion <me@jakechampion.name"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
derive_builder = "0.10.2"
hexponent = "0.3.1"
http-types = "2.11.1"
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4.0"
nom = "6.1.2"
num-traits = "0.2.14"
tokio = { version = "1", features = ["full"] }

